# bollinger-bands

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: app.py  main.py  main_old.py  main_old2.py
src/bollinger_bands/: __init__.py  __main__.py  bollinger_bands.py  data_fetcher.py  plotter.py  relative_strength.py  strategy.py
src/bollinger_bands/indicators/: band_width.py  bollinger_bands.py  crossing_detection.py  moving_average.py  relative_strength.py  signals.py
src/bollinger_bands/strategies/: relative_strength.py  strategy.py  zones.py
src/bollinger_bands/visualization/: formatting.py  plotter.py
tests/: test_bands.py  test_bollinger_bands.py  test_data_fetcher.py  test_relative_strength.py
