[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bollinger_bands"
version = "0.1.0"
authors = [{ name = "David Fischer", email = "no@email.com" }]
description = "A Python library for Bollinger Bands analysis"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }  
dependencies = [
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "yfinance>=0.1.67",
    "plotly>=5.3.1",
]

[project.optional-dependencies]
dev = ["pytest>=6.2.0", "black>=21.7b0", "flake8>=3.9.2"]

[tool.setuptools]
package-dir = { "" = "src" }  # Specify the src/ layout
packages = ["bollinger_bands"]  # List your package(s)
